# NodeFramework

./: .gitignore  .gitmodules  CMakeLists.txt  NodeStudio.pro
3rd/: CMakeLists.txt
3rd/QScintilla_src-2.12.1/src/: qscintilla.pro
3rd/lexilla/: CMakeLists.txt
3rd/lexilla/test/: README
3rd/scintilla/: CMakeLists.txt
NodeStudio/: NodeStudio.pro  cli.qrc  dialog.cpp  dialog.h  dialog.ui  namespace_define.h
NodeStudio/utils/: file_util.cc  file_util.h  message_looper_impl.cc  message_looper_impl.h  node_runner.cpp  node_runner.h  npm_runner.cpp  npm_runner.h  stdout_manager.cpp  stdout_manager.h  time_util.cc  time_util.h  utils.pri
application/: application.pro  mainwindow.cpp
